# JAGSDBern

./: README  configure.ac
src/: Bernoulli.cc  Makefile.am
src/distributions/: DBern.cc  DBern.h  Makefile.am
src/functions/: LogBernFun.cc  LogBernFun.h  Makefile.am
